2001-10-14  Jon Trowbridge  <trow@ximian.com>

	* htmlframe.c (html_frame_init): On second thought, maybe sharing
	the tokenizers isn't such a good idea after all...

	* htmliframe.c (html_iframe_init): Ditto.

2001-10-13  Jon Trowbridge  <trow@ximian.com>

	* htmliframe.c (html_iframe_init): The iframe's HTMLEngine needs
	to share the parent's HTMLTokenizer, not a copy. (Bug #11638)

	* htmlframe.c (html_frame_init): Likewise, the frame's HTMLEngine
	needs to share the parent's HTMLTokenizer, not a copy. (also Bug
	#11638)

2001-10-12  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (draw_changed_objects): test if we already have
	window

	* htmlobject.c (html_object_engine_intersection): new function,
	extracted
	(html_object_engine_translation): ditto

	* htmldrawqueue.c (draw_obj): refactorize, extracted few functions

	* htmlcluev.c (do_layout): handle case where width is > max_width
	and schedule area clear to changed_objs
	also store changed objs to local list which is prepend to global
	one on end

	* htmlengine.c (draw_changed_objects): handle area clears
	(clear_changed_area): do area clear here
	(html_engine_intersection): new extracted function

	* gtkhtml.c (gtk_html_begin): return NULL to avoid compiler
	warning

	* htmlclue.c (split): reset self::x,y to get right redraw in plain
	text mode

	* htmltext.c (get_tags): don't use </FONT size=...>, but just
	</FONT>
	(get_tags): join <tag> and </tag> additions together

	* htmlclueflow.c (save): in case of PRE paragraph, write final \n
	just after content
	(write_pre_tags): don't write \n for PRE here
	(save): don't put \n after <DIV>, </DIV>
	(save): put alignment tags inside

2001-10-12  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (gtk_html_private_calc_scrollbars): don't clip the
	page width it leads to bad things.

2001-10-09  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (get_pre_padding): fixed pre/post padding between
	list and non list paragraphs
	(need_list_begin): fix for list/non-list