@@ -1,3 +1,10 @@
+2001-10-14  Larry Ewing  <lewing@ximian.com>
+
+	* htmlimage.c (render_cur_frame): add hack to turn off alpha
+	blending durring an animation.  Since gifs are the only animation
+	type gdk-pixbuf supports it breaks nothing an makes for a big
+	spead increase.
+
 2001-10-14  Jon Trowbridge  <trow@ximian.com>
 
 	* htmlframe.c (html_frame_init): On second thought, maybe sharing
